--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,23 @@ body {
     font-family: "Open Sans", sans-serif;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
 .list {
     list-style: none;
 }
@@ -19,17 +36,45 @@ body {
     text-decoration: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    border: 0;
+    clip: rect(0 0 0 0);
+}
+
+.container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+
 .btn {
+    width: 160px;
+    height: 40px;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.09em;
     text-transform: uppercase;
+    border: 1px solid #ff6c00;
+    border-radius: 100px;
+    background-color: transparent;
 }
 
 .btn:hover,
 .btn:focus {
     background-color: var(--accent-color);
+}
+
+.section {
+    padding-top: 130px;
+    padding-bottom: 130px;
 }
 
 .pre-text {
@@ -57,14 +102,41 @@ body {
 
 .header {
     background-color: rgb(42, 30, 30);
+    /* padding-top: 32px;
+    padding-bottom: 32px; */
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+}
+
+.header-logo {
+    margin-right: 70px;
+}
+
+.header-navigation {
+    display: flex;
+    align-items: center;
+}
+
+.header-list {
+    display: flex;
+}
+
+.header-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 .header-link {
+    display: block;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.1em;
     color: #ffffff;
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
 
 .header-link:hover,
@@ -72,13 +144,22 @@ body {
     color: var(--accent-color);
 }
 
+.header-right {
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+
 .header-tel {
+    display: block;
     font-weight: 600;
     font-size: 12px;
     line-height: 1.33;
     letter-spacing: 0.1em;
-
+    padding-top: 48px;
+    padding-bottom: 48px;
     color: #ffffff;
+    margin-right: 40px;
 }
 
 .header-button {
@@ -89,6 +170,17 @@ body {
 
 .hero-main {
     background-color: rgb(42, 30, 30);
+    flex-grow: 1;
+    padding: 272px 0 206px 91px;
+}
+
+.hero-container {
+    display: flex;
+}
+
+.hero-list {
+    width: 100px;
+    display: flex;
 }
 
 .hero-item-link {
@@ -101,6 +193,7 @@ body {
 
 .hero-pre-text {
     color: rgba(157, 164, 189, 0.6);
+    margin-bottom: 20px;
 }
 
 .hero-title {
@@ -110,6 +203,7 @@ body {
     line-height: 1.18;
     letter-spacing: 0.05em;
     color: var(--main-title-color);
+    margin-bottom: 20px;
 }
 
 .hero-text {
@@ -118,16 +212,32 @@ body {
 
 /* ---------------ABOUT--------------- */
 
+.about-wrap {
+    display: flex;
+}
+
+.about-list {
+    display: flex;
+    margin-right: 64px;
+}
+
+.about-item + .about-item {
+    margin-left: 30px;
+}
+
 .about-pre-text {
     color: var(--third-text-color);
+    margin-bottom: 20px;
 }
 
 .about-title {
     color: var(--secondary-title-color);
+    margin-bottom: 20px;
 }
 
 .about-after-text {
     color: var(--main-text-color);
+    margin-bottom: 20px;
 }
 
 .about-text {
@@ -135,6 +245,16 @@ body {
     line-height: 1.86;
     letter-spacing: 0.02em;
     color: var(--main-text-color);
+    margin-bottom: 40px;
+}
+
+.about-content {
+    max-width: 500px;
+}
+
+.about-btn:hover,
+.about-btn:focus {
+    color: #ffffff;
 }
 
 /* ---------------PRICES--------------- */
@@ -145,10 +265,32 @@ body {
 
 .prices-pre-text {
     color: rgba(157, 164, 189, 0.6);
+    margin-bottom: 20px;
 }
 
 .prices-title {
     color: var(--main-title-color);
+    margin-bottom: 44px;
+}
+
+.prices-list-wrap {
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.prices-list {
+    border: 1px solid #ffffff;
+    width: 50%;
+    padding: 30px 40px;
+}
+
+.prices-item {
+    display: flex;
+    justify-content: space-between;
+}
+
+.prices-item:not(:last-child) {
+    margin-bottom: 20px;
 }
 
 .prices-item-text {
@@ -158,7 +300,50 @@ body {
     color: var(--secondary-text-color);
 }
 
+.prices-btn {
+    color: #ffffff;
+    display: block;
+    margin: 0 auto;
+}
+
 /* ---------------REASON--------------- */
+
+.reason-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.reason-left,
+.reason-right {
+    /* width: calc(100% / 2 - 15px); */
+    width: calc((100% - 30px) / 2);
+}
+
+.reason-list {
+    display: flex;
+    width: 370px;
+    flex-wrap: wrap;
+    align-items: end;
+    margin: 0 auto;
+}
+
+.reason-item {
+    width: 170px;
+    border: 1px solid #000000;
+    padding: 20px 24px;
+}
+
+.reason-item-spec {
+    padding: 20px;
+}
+
+.reason-item:nth-child(even) {
+    margin-top: 30px;
+}
+
+.reason-item:nth-child(odd) {
+    margin-right: 30px;
+}
 
 .reason-count {
     font-weight: 700;
@@ -167,6 +352,9 @@ body {
     text-align: center;
     letter-spacing: 0.05em;
     color: var(--third-text-color);
+    display: block;
+    text-align: center;
+    margin-bottom: 6px;
 }
 
 .reason-item-text {
@@ -179,10 +367,12 @@ body {
 
 .reason-pre-text {
     color: var(--third-text-color);
+    margin-bottom: 20px;
 }
 
 .reason-title {
     color: var(--secondary-title-color);
+    margin-bottom: 20px;
 }
 
 .reason-after-text {
@@ -193,10 +383,39 @@ body {
 
 .masters-pre-text {
     color: var(--third-text-color);
+    margin-bottom: 20px;
 }
 
 .masters-title {
     color: var(--secondary-title-color);
+    margin-bottom: 44px;
+}
+
+.masters-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+}
+
+.masters-item {
+    width: 370px;
+}
+
+.item-two {
+    order: 1;
+}
+
+.item-three {
+    order: 2;
+}
+
+.item-one {
+    order: 3;
+}
+
+.masters-item {
+    flex-basis: calc(100% / 3 - 30px);
+    margin-left: 30px;
 }
 
 .masters-item-title {
@@ -206,6 +425,7 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: var(--third-text-color);
+    margin-bottom: 8px;
 }
 
 .masters-item-text {
@@ -214,6 +434,10 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ff6c00;
+}
+
+.masters-item-content {
+    padding-top: 30px;
 }
 
 /* ---------------GALLERY--------------- */
