--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,21 @@ img {
     clip: rect(0 0 0 0);
 }
 
+@keyframes shake {
+    0% {
+        transform: translate(10px);
+    }
+    25% {
+        transform: translate(-20px);
+    }
+    75% {
+        transform: translate(10px);
+    }
+    100% {
+        transform: translate(0px);
+    }
+}
+
 .container {
     width: 1200px;
     padding-left: 15px;
@@ -69,6 +84,7 @@ img {
     border: 1px solid #ff6c00;
     border-radius: 100px;
     background-color: transparent;
+    transition: background-color 500ms linear;
 }
 
 .btn:hover,
@@ -116,7 +132,9 @@ img {
 /* -----------------HEADER---------------- */
 
 .header {
-    background-color: rgb(42, 30, 30);
+    position: absolute;
+    width: 100%;
+
     /* padding-top: 32px;
     padding-bottom: 32px; */
 }
@@ -128,6 +146,7 @@ img {
 
 .header-logo {
     margin-right: 70px;
+    /* animation: shake 400ms linear alternate infinite forwards; */
 }
 
 .logo-icon {
@@ -156,6 +175,7 @@ img {
     color: #ffffff;
     padding-top: 48px;
     padding-bottom: 48px;
+    transition: color 500ms linear;
 }
 
 .header-link:hover,
@@ -205,10 +225,21 @@ img {
     display: flex;
 }
 
-.hero-list {
+.hero-left {
     width: 100px;
     display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 40px;
+    padding-left: 30px;
+}
+
+.hero-list {
+    /* width: 100px; */
+    display: flex;
     align-items: center;
+    transform: rotate(-90deg);
+    transform-origin: left top;
 }
 
 .hero-list::before {
@@ -217,15 +248,24 @@ img {
     width: 60px;
     height: 1px;
     background-color: #303030;
-    margin-right: 40px;
+    flex-shrink: 0;
 }
 
+.hero-item {
+    margin-left: 40px;
+}
 .hero-item-link {
     font-weight: 600;
     font-size: 11px;
     line-height: 1.36;
     letter-spacing: 0.2em;
     color: var(--third-text-color);
+    transition: color 500ms linear;
+}
+
+.hero-item-link:hover,
+.hero-item-link:focus {
+    color: var(--accent-color);
 }
 
 .hero-pre-text {
@@ -414,7 +454,7 @@ img {
 
 .reason-item {
     width: 170px;
-    border: 1px solid #000000;
+    background: #f7f7f7;
     padding: 20px 24px;
 }
 
@@ -440,6 +480,17 @@ img {
     display: block;
     text-align: center;
     margin-bottom: 6px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.reason-count::after {
+    content: "+";
+    font-size: 16px;
+    line-height: calc(22 / 16);
+    color: var(--accent-color);
+    margin-top: 5px;
 }
 
 .reason-item-text {
@@ -515,6 +566,29 @@ img {
     box-shadow: 0 2px 4px 2px rgba(157, 164, 189, 0.12);
 }
 
+.masters-overlay {
+    position: relative;
+    overflow: hidden;
+}
+
+.masters-top-text {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 20px;
+    color: #ffffff;
+    line-height: 1.5;
+    background-color: rgba(248, 181, 56, 0.7);
+    overflow: auto;
+    transform: translateY(100%);
+    transition: transform 500ms linear;
+}
+
+.masters-item:hover .masters-top-text {
+    transform: translateY(0%);
+}
+
 .masters-item-title {
     font-weight: 400;
     font-size: 18px;
@@ -536,6 +610,7 @@ img {
 
 .masters-item-content {
     padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .socials-list {
@@ -560,6 +635,11 @@ img {
     justify-content: center;
     border-radius: 50%;
     background-color: #ffffff;
+    transition: background-color 500ms linear, fill 500ms linear;
+}
+
+.socials-icon {
+    transition: background-color 500ms linear, fill 500ms linear;
 }
 
 .socials-link:hover,
@@ -640,4 +720,45 @@ img {
     line-height: 1.36;
     letter-spacing: 0.2em;
     color: var(--third-text-color);
+}
+
+.backdrop {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(23, 26, 36, 0.2);
+    top: 0;
+    transition: opacity 600ms, visibility 600ms;
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
+}
+
+.modal {
+    position: absolute;
+    width: 400px;
+    min-height: 600px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 40px;
+}
+
+.btn-open {
+    width: 40px;
+    height: 40px;
+    border: 1px solid gray;
+    background-color: unset;
+    border-radius: 50%;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
