--- a/css/style.css
+++ b/css/style.css
@@ -671,18 +671,90 @@ img {
     margin-left: 30px;
 }
 
+.contact-wrapper {
+    background: #191c26;
+    background-image: url(../images/contacts-bg.png);
+    background-size: 50% auto;
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+.contact-wrapper .container {
+    display: flex;
+}
+
 /* ---------------ONLINE--------------- */
 
 .online {
-    background-color: #303030;
+    padding-right: 40px;
+    padding-bottom: 193px;
 }
 .online-title {
     color: var(--main-title-color);
+    margin-bottom: 44px;
+}
+
+.online-input {
+    padding-bottom: 8px;
+    width: 270px;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+    margin-bottom: 44px;
+    color: #ffffff;
+    outline: none;
+}
+
+.online-input:focus,
+.online-message:focus {
+    border-bottom: 1px solid #ffffff;
+}
+
+.online-input.small {
+    width: 260px;
+}
+
+.online-input:not(:last-child) {
+    margin-right: 30px;
+}
+
+.online-message {
+    width: 560px;
+    height: 76px;
+    display: block;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+    resize: none;
+    margin-bottom: 44px;
+    color: #ffffff;
+    outline: transparent;
+    transition: border-bottom 500ms linear;
+}
+
+.online-input::placeholder,
+.online-message::placeholder {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: calc(15 / 11);
+    letter-spacing: 0.1em;
+    color: rgba(157, 164, 189, 0.4);
+    transition: color 500ms linear;
+}
+
+.online-input:focus::placeholder,
+.online-message:focus::placeholder {
+    color: #ffffff;
+}
+
+.online-btn {
+    color: #ffffff;
 }
 /* ---------------CONTACTS--------------- */
 
 .contacts {
-    background-color: #303030;
+    padding-left: 100px;
 }
 .contacts-title {
     color: var(--main-title-color);
@@ -736,7 +808,7 @@ img {
 
 .modal {
     position: absolute;
-    width: 400px;
+    width: 550px;
     min-height: 600px;
     background-color: #ffffff;
     border-radius: 5px;
@@ -762,3 +834,138 @@ img {
     visibility: hidden;
     pointer-events: none;
 }
+
+.modal-title {
+    font-size: 18px;
+    text-align: center;
+    color: var(--secondary-title-color);
+    display: block;
+    margin-bottom: 20px;
+}
+
+.modal-form-field {
+    margin-bottom: 15px;
+}
+
+.modal-form-label {
+    font-size: 14px;
+    color: var(--third-text-color);
+    display: block;
+    margin-bottom: 4px;
+}
+
+.input-wrap {
+    display: block;
+    position: relative;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 42px;
+    border: 1px solid rgba(157, 164, 189, 0.4);
+    border-radius: 4px;
+    padding-left: 40px;
+}
+
+.modal-form-icon {
+    position: absolute;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.modal-comment {
+    width: 100%;
+    height: 130px;
+    border: 1px solid rgba(157, 164, 189, 0.4);
+    border-radius: 4px;
+    padding-left: 10px;
+    padding-top: 15px;
+    resize: none;
+}
+
+.modal-comment::placeholder {
+    font-size: 12px;
+}
+
+.check-label {
+    display: flex;
+    align-items: center;
+}
+/*  --------- Чекбокс-спрайт--------- */
+.icon-check {
+    width: 15px;
+    height: 15px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.checkbox:checked + .check-label > .icon-check {
+    background: var(--accent-color);
+    border: transparent;
+}
+
+/*  --------- Чекбокс-бифор--------- */
+
+/* .check-label::before {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    margin-right: 5px;
+} */
+/* .checkbox:checked + .check-label::before {
+    background: var(--accent-color);
+    background-image: url(../images/check.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    border: none;
+} */
+
+.form-btn {
+    margin: 0 auto;
+    display: block;
+}
+
+/*  --------- Чекбокс-ползунок--------- */
+
+/* .check-label {
+    position: relative;
+} */
+
+/* .check-label::before {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 26px;
+    border: 1px solid rgba(157, 164, 189, 0.4);
+    border-radius: 30px;
+    transition: background-color 300ms linear;
+}
+
+.check-label::after {
+    content: "";
+    display: block;
+    position: absolute;
+    left: 3px;
+    width: 20px;
+    height: 20px;
+    background-color: rgba(38, 81, 240, 0.8);
+    border-radius: 50%;
+    transition: transform 300ms linear;
+}
+
+.checkbox:checked + .check-label::after {
+    transform: translate(23px);
+}
+
+.checkbox:checked + .check-label::before {
+    background-color: rgb(97, 199, 141);
+} */
