--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -3,7 +3,7 @@
     justify-content: center;
 }
 
-.socials-item {
+.socials-list__item {
     width: 44px;
     height: 44px;
     &:not(:last-child) {
@@ -13,7 +13,7 @@
 
 
 
-.socials-link {
+.socials-list__link {
     width: 100%;
     height: 100%;
     display: flex;
@@ -28,10 +28,10 @@
     }
 }
 
-.socials-icon {
+.socials-list__icon {
     transition: background-color 500ms linear, fill 500ms linear;
-    .socials-link:hover &,
-    .socials-link:focus & {
+    .socials-list__link:hover &,
+    .socials-list__link:focus & {
         fill: var(--accent-color);
     }
 }
