--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -2,17 +2,14 @@
     background-color: #f7f7f7;
 }
 .masters-pre-text {
-    color: var(--third-text-color);
     margin-bottom: 20px;
-    &::before {
-        background-color: rgba(157, 164, 189, 0.6);
-    }
+    
 }
 
 
 
-.masters-title {
-    color: var(--secondary-title-color);
+.masters__title {
+
     margin-bottom: 44px;
 }
 
@@ -22,7 +19,7 @@
     margin-left: -30px;
 }
 
-.masters-item {
+.masters-list__item {
     width: 370px;
 }
 
@@ -44,12 +41,12 @@
     box-shadow: 0 2px 4px 2px rgba(157, 164, 189, 0.12);
 }
 
-.masters-overlay {
+.masters-list__overlay {
     position: relative;
     overflow: hidden;
 }
 
-.masters-top-text {
+.masters-list__top-text {
     position: absolute;
     top: 0;
     left: 0;
@@ -68,7 +65,7 @@
 
 
 
-.masters-item-title {
+.masters-list__title {
     font-weight: 400;
     font-size: 18px;
     line-height: 1.39;
@@ -78,7 +75,7 @@
     margin-bottom: 8px;
 }
 
-.masters-item-text {
+.masters-list__text {
     font-size: 14px;
     line-height: 1.36;
     text-align: center;
@@ -87,7 +84,7 @@
     margin-bottom: 30px;
 }
 
-.masters-item-content {
+.masters-list__content {
     padding-top: 30px;
     padding-bottom: 30px;
 }
