--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,25 +1,24 @@
-
-@import './utils/vars';
-@import './base/reset';
-@import './utils/hidden';
-@import './utils/animations';
-@import './utils/mixins';
-@import './base/container';
-@import './components/btn';
-@import './base/section';
-@import './components/pre-text';
-@import './components/after-text';
-@import './components/section-title';
-@import './components/socials';
-@import './layout/header';
-@import './layout/hero';
-@import './layout/about';
-@import './layout/prices';
-@import './layout/reason';
-@import './layout/masters';
-@import './layout/gallery';
-@import './layout/contact-wrapper';
-@import './layout/online';
-@import './layout/contacts';
-@import './layout/footer';
-@import './components/modal';
+@import "./utils/vars";
+@import "./base/reset";
+@import "./utils/hidden";
+@import "./utils/animations";
+@import "./utils/mixins";
+@import "./base/container";
+@import "./components/btn";
+@import "./base/section";
+@import "./components/pre-text";
+@import "./components/after-text";
+@import "./components/section-title";
+@import "./components/socials";
+@import "./layout/header";
+@import "./layout/hero";
+@import "./layout/about";
+@import "./layout/prices";
+@import "./layout/reason";
+@import "./layout/masters";
+@import "./layout/gallery";
+@import "./layout/contact-wrapper";
+@import "./layout/online";
+@import "./layout/contacts";
+@import "./layout/footer";
+@import "./components/modal";
