--- a/css/main.css
+++ b/css/main.css
@@ -68,10 +68,28 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 448px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .btn {
@@ -93,13 +111,20 @@ img {
 }
 
 .section {
-  padding-top: 130px;
-  padding-bottom: 130px;
+  padding-top: 84px;
+  padding-bottom: 84px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
 }
 
 .pre-text {
-  font-size: 11px;
-  line-height: 1.36364;
+  font-size: 10px;
+  line-height: 1.5;
   font-weight: 600;
   letter-spacing: 0.1em;
   text-transform: uppercase;
@@ -110,9 +135,24 @@ img {
 .pre-text::before {
   content: "";
   display: block;
-  width: 63px;
+  width: 50px;
   height: 1px;
   margin-right: 21px;
+}
+
+@media screen and (min-width: 480px) {
+  .pre-text::before {
+    width: 60px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .pre-text {
+    font-size: 11px;
+    line-height: 1.36364;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+  }
 }
 
 .pre-text_color_light {
@@ -132,10 +172,30 @@ img {
 }
 
 .after-text {
-  font-size: 18px;
-  line-height: 1.66667;
+  font-size: 12px;
+  line-height: 2.16667;
   font-weight: 400;
   letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 480px) {
+  .after-text {
+    font-size: 16px;
+    line-height: 1.625;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    max-width: 306px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .after-text {
+    font-size: 18px;
+    line-height: 1.66667;
+    font-weight: 400;
+    letter-spacing: 0.02em;
+    max-width: 403px;
+  }
 }
 
 .after-text_color_light {
@@ -149,9 +209,21 @@ img {
 .section-title {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 42px;
+  font-size: 26px;
   line-height: 1.17;
   letter-spacing: 0.05em;
+}
+
+@media screen and (min-width: 480px) {
+  .section-title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-title {
+    font-size: 42px;
+  }
 }
 
 .section-title_color_dark {
@@ -199,13 +271,14 @@ img {
 .header {
   position: absolute;
   width: 100%;
-  /* padding-top: 32px;
-    padding-bottom: 32px; */
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .header .container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .header__logo {
@@ -214,7 +287,7 @@ img {
 }
 
 .logo__icon {
-  fill: #303030;
+  fill: #ffffff;
 }
 
 .header-navigation {
@@ -224,6 +297,7 @@ img {
 
 .header-list {
   display: flex;
+  display: none;
 }
 
 .header-list__item:not(:last-child) {
@@ -250,6 +324,7 @@ img {
   margin-left: auto;
   display: flex;
   align-items: center;
+  display: none;
 }
 
 .header-right__tel {
@@ -268,18 +343,92 @@ img {
   color: #ffffff;
 }
 
+.mob-menu {
+  width: 337px;
+  height: 100vh;
+  position: fixed;
+  background-color: #ffffff;
+  top: 0;
+  right: 0;
+  padding-top: 48px;
+  padding-left: 40px;
+  padding-right: 31px;
+}
+
+.menu-close {
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  color: #303030;
+  border: none;
+  display: block;
+  margin-left: auto;
+}
+
+.mob-menu-list {
+  margin-bottom: 64px;
+}
+
+.mob-menu-list__item:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.mob-menu.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
 .hero-main {
   background-color: #2a1e1e;
   flex-grow: 1;
-  padding: 272px 0 206px 91px;
-  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg.jpg);
+  padding: 208px 0 183px 31px;
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-main {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg-mob-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-main {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg-tab.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-main {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg-tab-2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-main {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-main {
+    background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero/hero-bg-desc-2x.jpg);
+  }
+}
+
 .hero-container {
   display: flex;
+  padding: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
 
 .hero-left {
@@ -289,6 +438,13 @@ img {
   justify-content: flex-end;
   padding-bottom: 40px;
   padding-left: 30px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .hero-left {
+    display: flex;
+  }
 }
 
 .hero-list {
@@ -332,11 +488,24 @@ img {
 .hero-main__title {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 72px;
-  line-height: 1.18;
+  font-size: 32px;
+  line-height: calc(56 / 48);
   letter-spacing: 0.05em;
   color: var(--main-title-color);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-main__title {
+    font-size: 48px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-main__title {
+    font-size: 72px;
+    line-height: calc(85 / 72);
+  }
 }
 
 .about-wrap {
@@ -344,12 +513,33 @@ img {
 }
 
 .about-list {
-  display: flex;
-  margin-right: 64px;
+  margin-right: 30px;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .about-list {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-list {
+    margin-right: 64px;
+    flex-direction: row;
+  }
 }
 
 .about-list__item + .about-list__item {
-  margin-left: 30px;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .about-list__item + .about-list__item {
+    margin-left: 30px;
+    margin-top: unset;
+  }
 }
 
 .about-pre-text {
@@ -372,8 +562,16 @@ img {
   margin-bottom: 40px;
 }
 
-.about-content {
-  max-width: 500px;
+@media screen and (min-width: 768px) {
+  .about-content {
+    max-width: 330px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about-content {
+    max-width: 500px;
+  }
 }
 
 .about-btn:hover, .about-btn:focus {
@@ -558,32 +756,37 @@ img {
   margin-bottom: 44px;
 }
 
-.masters-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
+@media screen and (min-width: 768px) {
+  .masters-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+  }
 }
 
 .masters-list__item {
-  width: 370px;
-}
-
-.item-two {
-  order: 1;
-}
-
-.item-three {
-  order: 2;
-}
-
-.item-one {
-  order: 3;
-}
-
-.masters-item {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
+  width: 100%;
   box-shadow: 0 2px 4px 2px rgba(157, 164, 189, 0.12);
+}
+
+.masters-list__item img {
+  width: 100%;
+  height: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .masters-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .masters-list__item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .masters-list__overlay {
