--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,4 +1,9 @@
 .section {
-    padding-top: 130px;
+    padding-top: 84px;
+    padding-bottom: 84px;
+    @media screen and (min-width: 1200px){
+        padding-top: 130px;
     padding-bottom: 130px;
+        
+    }
 }
