--- a/sass/components/_section-title.scss
+++ b/sass/components/_section-title.scss
@@ -1,9 +1,17 @@
 .section-title {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
-    font-size: 42px;
+    font-size: 26px;
     line-height: 1.17;
     letter-spacing: 0.05em;
+    @media screen and (min-width: 480px){
+        font-size: 28px;
+        
+    }
+    @media screen and (min-width: 1200px){
+        font-size: 42px;
+        
+    }
 }
 
 .section-title_color_dark {
