--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,19 +1,68 @@
 .hero-main {
     background-color: rgb(42, 30, 30);
     flex-grow: 1;
-    padding: 272px 0 206px 91px;
+    padding: 208px 0 183px 31px;
     background-image: linear-gradient(
             rgba(25, 28, 38, 0.2),
             rgba(25, 28, 38, 0.2)
         ),
-        url(../images/hero/hero-bg.jpg);
+        url(../images/hero/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
+    background-size: cover; 
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {    
+        background-image: linear-gradient(
+            rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)
+        ),
+        url(../images/hero/hero-bg-mob-2x.jpg);
+
+    }
+    @media screen and (min-width: 768px){
+        background-image: linear-gradient(
+            rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)
+        ),
+        url(../images/hero/hero-bg-tab.jpg);
+    }
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {    
+        background-image: linear-gradient(
+            rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)
+        ),
+        url(../images/hero/hero-bg-tab-2x.jpg);
+
+    }
+     @media screen and (min-width: 1200px){
+        background-image: linear-gradient(
+            rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)
+        ),
+        url(../images/hero/hero-bg.jpg);
+    }
+    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {    
+        background-image: linear-gradient(
+            rgba(25, 28, 38, 0.2),
+            rgba(25, 28, 38, 0.2)
+        ),
+        url(../images/hero/hero-bg-desc-2x.jpg);
+
+    }
 }
 
 .hero-container {
     display: flex;
+    padding: 0;
+    @media screen and (min-width: 768px){
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .hero-left {
@@ -23,6 +72,11 @@
     justify-content: flex-end;
     padding-bottom: 40px;
     padding-left: 30px;
+    display: none;
+
+    @media screen and (min-width: 768px){
+        display: flex;
+    }
 }
 
 .hero-list {
@@ -68,9 +122,17 @@
 .hero-main__title {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
-    font-size: 72px;
-    line-height: 1.18;
+    font-size: 32px;
+    line-height: calc(56 / 48);
     letter-spacing: 0.05em;
     color: var(--main-title-color);
     margin-bottom: 20px;
+    @media screen and (min-width: 480px){
+        font-size: 48px;
+    }
+
+    @media screen and (min-width: 1200px){
+        font-size: 72px;
+        line-height: calc(85 / 72);
+    }
 }
