--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -14,32 +14,48 @@
 }
 
 .masters-list {
-    display: flex;
+    // display: flex;
+    // flex-wrap: wrap;
+    // margin-left: -30px;
+    @media screen and (min-width: 768px) {
+        display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
+    margin-top: -30px;
+    }
 }
 
 .masters-list__item {
-    width: 370px;
-}
-
-.item-two {
-    order: 1;
-}
-
-.item-three {
-    order: 2;
-}
-
-.item-one {
-    order: 3;
-}
-
-.masters-item {
-    flex-basis: calc(100% / 3 - 30px);
-    margin-left: 30px;
+    width: 100%;
     box-shadow: 0 2px 4px 2px rgba(157, 164, 189, 0.12);
+    img {
+        width: 100%;
+        height: auto;
+    }
+    @media screen and (min-width: 768px) {
+        flex-basis: calc(100% / 2 - 30px);
+        margin-left: 30px;
+    margin-top: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc(100% / 3 - 30px);
+
+    }
 }
+
+// .item-two {
+//     order: 1;
+// }
+
+// .item-three {
+//     order: 2;
+// }
+
+// .item-one {
+//     order: 3;
+// }
+
+
 
 .masters-list__overlay {
     position: relative;
